Fixing light mode visibility bug
This is being done by setting root variables in the app.css for the entire app. This does not seem to be the best solution. Possibly look for library to address styling in Svelte, or just set a separate css file for all variables. SCSS?

--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  --secondary-background-color: #323232;
+  --highlight-color: rgb(253, 188, 102);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -45,6 +47,10 @@ body {
   :root {
     color: #213547;
     background-color: #ffffff;
+    --text-color: #213547;
+    --background-color: #ffffff;
+    --secondary-background-color: #f9f9f9;
+    --highlight-color: #747bff;
   }
   a:hover {
     color: #747bff;
